--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
 							<!-- Main Title -->
 							<div class="resumo_fn_main_title">
 								<h3 class="subtitle">Introduction</h3>
-								<h3 class="title">UI/UX Designer</h3>
-								<p class="desc">I design and develop services for customers of all sizes, specializing in creating stylish, modern websites, web services and online stores.</p>
+								<h3 class="title">Business Analyst</h3>
+								<p class="desc">I analyzes and documents the market environment, processes, or systems of businesses.</p>
 								<img src="img/signature.png" alt="">
 							</div>
 							<!-- /Main Title -->
@@ -112,19 +112,19 @@
 									<table>
 										<tr>
 											<th>Name</th>
-											<th>Bruce Wilson</th>
+											<th>Debasish Debnath</th>
 										</tr>
 										<tr>
 											<th>Birthday</th>
-											<th>4th April 1990</th>
+											<th>22nd September 1999</th>
 										</tr>
 										<tr>
 											<th>Age</th>
-											<th>31 years</th>
+											<th>22 years</th>
 										</tr>
 										<tr>
 											<th>Address</th>
-											<th>San Francisco</th>
+											<th>Rajpur Sonarpur</th>
 										</tr>
 										<tr>
 											<th>Phone</th>
@@ -136,7 +136,7 @@
 										</tr>
 										<tr>
 											<th>Skype</th>
-											<th><a href="skype:brucewilson.90">brucewilson.90</a></th>
+											<th><a href="skype:live:sunnydebashis2016">sunnydebashis2016</a></th>
 										</tr>
 									</table>
 								</div>
